@@ -1,0 +1,1 @@
+int draw_staff(cairo_t *cr, guint16 nb_lines, gdouble space_btwn_lines, gdouble x1, gdouble y1, gdouble x2, gboolean selected);
